--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,13 @@
 {
     "recommendations": [
+        "ms-vscode.cmake-tools",
+        "ms-vscode.vscode-serial-monitor",
         "raspberry-pi.raspberry-pi-pico",
         "ms-vscode.cpptools-extension-pack",
-        "twxs.cmake",
-        "wokwi.wokwi-vscode",
-        "ms-vscode.vscode-serial-monitor",
         "ms-vscode.cpptools-themes",
+        "twxs.cmake",
         "marus25.cortex-debug",
-        "ms-vscode.cmake-tools",
-        "ms-vscode.cpptools"
+        "ms-vscode.cpptools",
+        "wokwi.wokwi-vscode"
     ]
 }
