--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,13 @@
 {
     "recommendations": [
         "ms-vscode.cmake-tools",
-        "ms-vscode.vscode-serial-monitor",
-        "raspberry-pi.raspberry-pi-pico",
         "ms-vscode.cpptools-extension-pack",
-        "ms-vscode.cpptools-themes",
-        "twxs.cmake",
         "marus25.cortex-debug",
         "ms-vscode.cpptools",
-        "wokwi.wokwi-vscode"
+        "raspberry-pi.raspberry-pi-pico",
+        "wokwi.wokwi-vscode",
+        "twxs.cmake",
+        "ms-vscode.cpptools-themes",
+        "ms-vscode.vscode-serial-monitor"
     ]
 }
